@@ -248,7 +248,7 @@ ls (int argc, char **argv)
 	else
 	{
 	    /* should be ".", but do_recursion() 
-	       fails this: assert ( strstr ( repository, "/./" ) == NULL ); */
+	       fails this: assert ( mbsstr ( repository, "/./" ) == NULL ); */
 	    char *topmod = xstrdup ("");
 	    err += do_module (db, topmod, MISC, "Listing",
 			      ls_proc, NULL, 0, 0, 0, 0, NULL);
